@@ -23,9 +23,9 @@ DESCRIPTION
        (.Z), CPIO (.cpio), DEB (.deb), DMS (.dms), FLAC (.flac),  GZIP
        (.gz),  ISO (.iso), LRZIP (.lrz), LZH (.lha, .lzh), LZIP (.lz),
        LZMA (.lzma), LZOP (.lzo), RPM (.rpm), RAR (.rar,  .cbr),  RZIP
-       (.rz), SHN (.shn), TAR (.tar, .cbt), XZ (.xz), ZIP (.zip, .jar,
-       .cbz), ZOO (.zoo), ZPAQ (.zpaq) and  ZSTANDARD  (.zst)  archive
-       formats.
+       (.rz),  SHN (.shn), TAR (.tar, .cbt), UDF (.udf), XZ (.xz), ZIP
+       (.zip, .jar, .cbz), ZOO  (.zoo),  ZPAQ  (.zpaq)  and  ZSTANDARD
+       (.zst) archive formats.
        It  relies  on helper applications to handle those archive for‐
        mats (for example xz for XZ (.xz) archives).
 
