@@ -44,6 +44,7 @@ class Test7z(ArchiveTest):
         self.archive_list('t.rpm')
         self.archive_list('t.deb')
         self.archive_list('t.iso')
+        self.archive_list('t.udf')
         self.archive_list('t.vhd')
         self.archive_extract('t.txt.gz', check=Content.Singlefile)
         self.archive_extract('t.txt.bz2', check=Content.Singlefile)
@@ -57,6 +58,7 @@ class Test7z(ArchiveTest):
         self.archive_extract('t.rpm', check=None)
         self.archive_extract('t.deb', check=None)
         self.archive_extract('t.iso')
+        self.archive_extract('t.udf')
         self.archive_extract('t.vhd', check=None)
         self.archive_test('t.txt.gz')
         self.archive_test('t.txt.bz2')
@@ -70,6 +72,7 @@ class Test7z(ArchiveTest):
         self.archive_test('t.rpm')
         self.archive_test('t.deb')
         self.archive_test('t.iso')
+        self.archive_test('t.udf')
         self.archive_test('t.vhd')
         self.archive_create('t.txt.gz', check=Content.Singlefile)
         self.archive_create('t.txt.bz2', check=Content.Singlefile)
